# rvr.base

./: .env  .gitignore  LICENSE  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
rvr_base/: config.py  constants.py  loganalyticslogger.py  mylogger.py  rvrlogger.py
rvrbase/: rvrconfig.py  rvrlogger.py
src/rvr_base.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rvrbase/: __about__.py  __init__.py  azure_logger_api.py  constants.py  delegate.py  loganalyticslogger.py  new_azure_logger_api.py  new_notification_api.py  notification_api.py  rvrbase.py  rvrlogger.py  rvrlogger_api.py  rvrlogger_delegate.py
src/rvrbase/api/: __init__.py  azure_logger_api.py  azure_reader_api.py  rvrconfig.py
src/test/: test_azure_reader_api.py  test_delegate.py  test_rvrconfig.py  test_rvrlogger.py
src/test/testdata/: config.ini
