[metadata]
name = rvr-base
version = 0.0.3
author = Robert van Reems
author_email = disclosed@some.com
description = Roberts base module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertreems/rvrbase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    dbus-python
    notify_run

[options.packages.find]
where = src