[metadata]
name = rvr-base
version = attr: rvrbase.__about__.__version__
author = Robert van Reems
description = Roberts base module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertreems/rvrbase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    dbus-python
    notify_run

[options.packages.find]
where = src